--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,200 @@ img{
 }
 
 body{
+     background-color: black;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container{
     width: 1140px;
     margin: 0 auto;
+}
+
+.navbar{
+    padding: 20px 0px;
+    background-color: black;
+    transition: .5s;
+}
+
+
+.navbar:hover{
+    box-shadow: 0px 0px 30px 0px red;
+}
+
+.aperture img{
+    width: 120px;
+    margin-left: -10%;
+}
+
+
+.aperture{
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.aper_list{
+    margin-left: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.aper_item a{
+    font-size: 17px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+   margin: 0px 20px;
+}
+
+
+.aperture .getone{
+    font-size: 17px;
+    color: black;
+background-color: white;
+    padding: 10px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+}
+
+
+/* /////////////////////////////////////////// */
+
+
+.main .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.main{
+    background-image: url("../img/IMAGE\ \(30\).png");
+    width: 100%;
+    background-size: 100%;
+    background-repeat:no-repeat;
+    padding: 100px 0px;
+}
+
+.study_text{
+    margin-top: 26%;
+}
+
+.study_text h5{
+    color: white;
+    text-align: center;
+    font-size: 19px;
+    font-weight: normal;
+}
+
+
+.study_text h1{
+    color: white;
+    text-align: center;
+    font-size: 50px;
+    margin: 5   px 0px;
+    font-weight: normal;
+}
+
+
+.study_text p{
+    color: white;
+    font-size: 20px;
+    width: 800px;
+    text-align: center;
+    line-height: 35px;
+}
+
+
+
+/* //////////////////////////////////////////// */
+
+
+.section1 .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.what h1{
+    color: white;
+text-align: center;
+font-size: 40px;
+font-weight: normal;
+
+}
+
+
+.what p{
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    font-weight: normal;
+}
+
+.what_list{
+    margin-top: 5%;
+}
+
+.what_item img{
+ 
+    width: 500px;
+}
+
+.what_text{
+    margin-top: -40%;
+    margin-left: 5%;
+}
+
+.what_list{
+display: flex;
+}
+
+.what_item{
+    margin: 0px 20px;
+}
+
+.what_item h3{
+    color: rgb(205, 205, 205);
+    font-weight: normal;
+    font-size: 25px;
+}
+
+
+.what_item h5{
+
+  font-size: 14px;
+  font-weight: normal;
+  color: rgb(205, 205, 205);
+  width: 420px;
+}
+
+
+.what_item a{
+    color: black;
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-weight: bolder;
+    margin-top: 10px;
+}
+
+
+.what_list2{
+    display: flex;
+    margin-top: 7%;
+    
+    justify-content: center;
+}
+
+
+.what_text2{
+    margin-top: -40%;
+    margin-left: 5%;
 }
